# prompt-for-user-input-mcp

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_WINDOWS.md  README_sdk.md  VSCODE_EXTENSION_SETUP.md  cursor-mcp-config.json  mcp_server.py  pyproject.toml  requirements.txt  setup.py  setup_windows.bat  user_input_console.py
.cursor/rules/: agent.mdc
extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts  webview.html  webview.js
