[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-user-input-mcp"
version = "1.0.0"
description = "MCP server that allows models to prompt users for input"
authors = [{ name = "Jesse Gomez", email = "jesse.gomez201@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["mcp>=1.0.0", "pydantic>=2.0.0"]

[project.scripts]
prompt-user-input-mcp = "mcp_server.py:main"
